# VideoCompress

./: README.md  build.gradle
sample/: build.gradle
sample/src/main/java/com/lalongooo/videocompressor/: MainActivity.java
videocompress/: build.gradle  proguard-rules.pro
videocompress/src/main/: AndroidManifest.xml
videocompress/src/main/java/com/haoutil/videocompress/: InputSurface.java  MP4Builder.java  MediaController.java  Mp4Movie.java  OutputSurface.java  Sample.java  TextureRenderer.java  Track.java  Utilities.java  VideoEditedInfo.java
videocompress/src/main/jni/: CMakeLists.txt  video.c
